--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "metro-react-native-babel-preset": "^0.76.7",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "^0.70.8",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
